Agregado archivo de información y preparando la carga de mibot

--- a/src/config.json
+++ b/src/config.json
@@ -1,1 +1,1 @@
-{"Number":"5491166948438","Identity":"%cd%5dq%00%e5%0d%b2%03%90%fe%ady4%e0h%92%2f%1ejm","Password":null,"Nickname":"WhatsBot","DevMode":false}
+{"Number":"5492494309105"}
